syntax = "proto3";

import "taskSet.proto";

package opennms.taskset.service;
option java_multiple_files = true;
option java_package = "org.opennms.taskset.service.contract";

service TaskSetService {
  rpc updateTasks(UpdateTasksRequest) returns (UpdateTasksResponse) {}

}

//
// PUBLISH TASK SET (TODO - remove)
//
message PublishTaskSetRequest {
  string location_id = 1;
  opennms.taskset.TaskSet task_set = 2;
}

message PublishTaskSetResponse {
}

message UpdateTasksRequestList {
  repeated UpdateTasksRequest updateTasksRequest = 1;
}

//
// UPDATE TASKS
//
message UpdateTasksRequest {
  string tenant_id = 1;
  string location_id = 2;
  repeated UpdateSingleTaskOp update = 3;
}

message UpdateTasksResponse {
  int32 num_new = 1;
  int32 num_removed = 2;
  int32 num_replaced = 3;
}

message UpdateSingleTaskOp {
  oneof op {
      AddSingleTaskOp add_task = 1;
      RemoveSingleTaskOp remove_task = 2;
  }
}

message AddSingleTaskOp {
  TaskDefinition task_definition = 1;
}

message RemoveSingleTaskOp {
  string task_id = 1;
}
